fix ceo cards overlap

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,7 @@
 
 #app {
   
- width: 100%;
+
 
   overflow-x: hidden;
  
